--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ psycopg2-binary==2.7.6.1
 Pillow==2.9.0
 Django==1.11
 django-heroku==0.3.1
+dj-database-url==0.5.0
 six==1.9.0
 
 BeautifulSoup4==4.4.0
