--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel
-          pip install -r requirements/base.txt requirements/dev.txt
+          pip install -r requirements/base.txt -r requirements/dev.txt
       - uses: pre-commit/action@v3.0.0
       - name: Run Tests
         run: make test
