--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,6 +42,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip wheel
           pip install -r requirements/base.txt requirements/dev.txt
+      - name: Install geckodriver
+        run: |
+            curl -L https://github.com/mozilla/geckodriver/releases/download/v0.33.0/geckodriver-v0.33.0-linux64.tar.gz > geckodriver.tar.gz
+            tar -zxvf geckodriver.tar.gz
+            sudo mv geckodriver /usr/local/bin
+            sudo chown root:root /usr/local/bin/geckodriver
       - uses: pre-commit/action@v3.0.0
       - name: Run Tests
         run: make test
